force-app/main/default/objects/Qualification__c/Qualification__c.object-meta.xml
<CustomObject>
    <label>הכשרה</label>
    <nameField>
        <label>שם הכשרה</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>הכשרות</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>