force-app/main/default/objects/Qualification__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>שם לקוח</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>הכשרות</relationshipLabel>
    <relationshipName>QualificationAccount</relationshipName>
    <type>Lookup</type>
</CustomField>