force-app/main/default/objects/Qualification__c/fields/agra_maasi__c.field-meta.xml
<CustomField>
    <fullName>agra_maasi__c</fullName>
    <label>אגרה מעשי</label>
    <length>12</length>
    <type>Text</type>
</CustomField>