force-app/main/default/objects/Qualification__c/fields/agra_mahshirim__c.field-meta.xml
<CustomField>
    <fullName>agra_mahshirim__c</fullName>
    <label>אגרה מכשירים</label>
    <length>12</length>
    <type>Text</type>
</CustomField>