force-app/main/default/objects/Qualification__c/fields/agra_mechona__c.field-meta.xml
<CustomField>
    <fullName>agra_mechona__c</fullName>
    <label>אגרה מכונה</label>
    <length>12</length>
    <type>Text</type>
</CustomField>