force-app/main/default/objects/Qualification__c/fields/agra_nivut_hofi__c.field-meta.xml
<CustomField>
    <fullName>agra_nivut_hofi__c</fullName>
    <label>אגרה ניווט חופי</label>
    <length>12</length>
    <type>Text</type>
</CustomField>