force-app/main/default/objects/Qualification__c/fields/certificate__c.field-meta.xml
<CustomField>
    <fullName>certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>קיבל תעודה</label>
    <type>Checkbox</type>
</CustomField>