force-app/main/default/objects/Qualification__c/fields/course_number__c.field-meta.xml
<CustomField>
    <fullName>course_number__c</fullName>
    <label>מספר סידורי של הקורס</label>
    <length>30</length>
    <type>Text</type>
</CustomField>