force-app/main/default/objects/Qualification__c/fields/date_mahshirim__c.field-meta.xml
<CustomField>
    <fullName>date_mahshirim__c</fullName>
    <label>תאריך מכשירים</label>
    <type>Date</type>
</CustomField>