force-app/main/default/objects/Qualification__c/fields/date_mechona__c.field-meta.xml
<CustomField>
    <fullName>date_mechona__c</fullName>
    <label>תאריך מכונה</label>
    <type>Date</type>
</CustomField>