force-app/main/default/objects/Qualification__c/fields/date_nivut_hofi__c.field-meta.xml
<CustomField>
    <fullName>date_nivut_hofi__c</fullName>
    <label>תאריך ניווט חופי</label>
    <type>Date</type>
</CustomField>