force-app/main/default/objects/Qualification__c/fields/Exam_Date__c.field-meta.xml
<CustomField>
    <fullName>Exam_Date__c</fullName>
    <label>תאריך מבחן הבא</label>
    <type>Date</type>
</CustomField>