force-app/main/default/objects/Qualification__c/fields/Fee_Number__c.field-meta.xml
<CustomField>
    <fullName>Fee_Number__c</fullName>
    <label>מספר אגרה למבחן</label>
    <length>50</length>
    <type>Text</type>
</CustomField>