force-app/main/default/objects/Qualification__c/fields/first_aid__c.field-meta.xml
<CustomField>
    <fullName>first_aid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>עזרה ראשונה</label>
    <type>Checkbox</type>
</CustomField>