force-app/main/default/objects/Qualification__c/fields/first_lesson__c.field-meta.xml
<CustomField>
    <fullName>first_lesson__c</fullName>
    <label>תאריך שיעור 1</label>
    <type>Date</type>
</CustomField>