force-app/main/default/objects/Qualification__c/fields/passed_instruments__c.field-meta.xml
<CustomField>
    <fullName>passed_instruments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>עבר מכשירים</label>
    <type>Checkbox</type>
</CustomField>