force-app/main/default/objects/Qualification__c/fields/passed_navigation__c.field-meta.xml
<CustomField>
    <fullName>passed_navigation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>עבר ניווט חופי</label>
    <type>Checkbox</type>
</CustomField>