force-app/main/default/objects/Qualification__c/fields/passed_practicaltest__c.field-meta.xml
<CustomField>
    <fullName>passed_practicaltest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>עבר מעשי</label>
    <type>Checkbox</type>
</CustomField>