force-app/main/default/objects/Qualification__c/fields/passed_seamanship__c.field-meta.xml
<CustomField>
    <fullName>passed_seamanship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>עבר ימאות</label>
    <type>Checkbox</type>
</CustomField>