force-app/main/default/objects/Qualification__c/fields/practical_pass_date__c.field-meta.xml
<CustomField>
    <fullName>practical_pass_date__c</fullName>
    <label>תאריך מעבר מעשי</label>
    <type>Date</type>
</CustomField>