force-app/main/default/objects/Qualification__c/fields/second_lesson__c.field-meta.xml
<CustomField>
    <fullName>second_lesson__c</fullName>
    <label>תאריך שיעור 2</label>
    <type>Date</type>
</CustomField>