force-app/main/default/objects/Qualification__c/fields/study_type__c.field-meta.xml
<CustomField>
    <fullName>study_type__c</fullName>
    <label>אופן לימודים</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>לימוד עצמי</fullName>
            </value>
            <value>
                <fullName>כיתה</fullName>
            </value>
            <value>
                <fullName>קורס פרטי עם מדריך</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>