force-app/main/default/objects/Qualification__c/fields/test1__c.field-meta.xml
<CustomField>
    <fullName>test1__c</fullName>
    <label>מעבר מבחן 1</label>
    <type>Date</type>
</CustomField>