force-app/main/default/objects/Qualification__c/fields/test2__c.field-meta.xml
<CustomField>
    <fullName>test2__c</fullName>
    <label>מעבר מבחן 2</label>
    <type>Date</type>
</CustomField>