force-app/main/default/objects/Qualification__c/fields/test3__c.field-meta.xml
<CustomField>
    <fullName>test3__c</fullName>
    <label>מעבר מבחן 3</label>
    <type>Date</type>
</CustomField>