force-app/main/default/objects/Qualification__c/fields/theory_pass_date__c.field-meta.xml
<CustomField>
    <fullName>theory_pass_date__c</fullName>
    <label>תאריך מעבר תאוריה</label>
    <type>Date</type>
</CustomField>