force-app/main/default/objects/Qualification__c/fields/theory_YN__c.field-meta.xml
<CustomField>
    <fullName>theory_YN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>עבר/ה תאוריה</label>
    <type>Checkbox</type>
</CustomField>