force-app/main/default/objects/Qualification__c/fields/third_lesson__c.field-meta.xml
<CustomField>
    <fullName>third_lesson__c</fullName>
    <label>תאריך שיעור 3</label>
    <type>Date</type>
</CustomField>