force-app/main/default/objects/Qualification__c/fields/third_test__c.field-meta.xml
<CustomField>
    <fullName>third_test__c</fullName>
    <label>תאריך מבחן 3</label>
    <type>Date</type>
</CustomField>