force-app/main/default/objects/Qualification__c/fields/X1__c.field-meta.xml
<CustomField>
    <fullName>X1__c</fullName>
    <label>מבחן 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>מכונה</fullName>
            </value>
            <value>
                <fullName>ימאות</fullName>
            </value>
            <value>
                <fullName>ניווט חופי</fullName>
            </value>
            <value>
                <fullName>ניווט מכשירים</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>