force-app/main/default/objects/Qualification__c/fields/X3__c.field-meta.xml
<CustomField>
    <fullName>X3__c</fullName>
    <label>מבחן 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>מככונה</fullName>
            </value>
            <value>
                <fullName>ימאות</fullName>
            </value>
            <value>
                <fullName>ניווט חופי</fullName>
            </value>
            <value>
                <fullName>ניווט מכשירים</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>