force-app/main/default/objects/Qualification__c/recordTypes/GMDSS.recordType-meta.xml
<RecordType>
    <fullName>GMDSS</fullName>
    <active>true</active>
    <label>לא בשימוש 1</label>
</RecordType>