force-app/main/default/objects/Qualification__c/recordTypes/meshit_30.recordType-meta.xml
<RecordType>
    <fullName>meshit_30</fullName>
    <active>true</active>
    <label>משיט 30</label>
</RecordType>